# home-net

./: .gitignore  CLAUDE.md  README.md
.pydevice/: config.json  settings.json
devices/bike-led/: main.py
devices/led-controller/: .gitignore  CMakeLists.txt  README.md  sample-api-response.json  sdkconfig.defaults
devices/led-controller/main/: CMakeLists.txt  Kconfig.projbuild  led_controller.c  led_controller.h  led_sequence_api.c  led_sequence_api.h  led_settings.c  led_settings.h  main.c  web_server.c  wifi_station.c  wifi_station.h
devices/led-sequence-server/: .dockerignore  .gitignore  Dockerfile  LedSequence.slnx  README.md  compose.yaml
devices/mqtt-switch/: config.py  main.py
devices/mqtt-switch-c/: CMakeLists.txt  README.md  sdkconfig.defaults
devices/mqtt-switch-c/main/: CMakeLists.txt  Kconfig.projbuild  app_state.c  app_state.h  main.c  mqtt_switch.c  mqtt_switch.h  status_led.c  status_led.h  switch_output.c  switch_output.h  wifi_station.c  wifi_station.h
prusa-config-presets/: README.md  install.ps1  install.sh
prusa-config-presets/filament/: PLA Low Temp.ini
prusa-config-presets/physical_printer/: Prusa MK2.5S.ini  Prusa MK4S.ini
prusa-config-presets/printer/: Original Prusa MK4S MMU3 0.25 nozzle.ini
scripts/: esp-idf-task.sh
servers/ai/: .gitignore  1  Dockerfile  create.sh  destroy.sh  readme.md
servers/automation/: Dockerfile  create.sh  destroy.sh
servers/cronicle/: Dockerfile  create.sh  email.sh
servers/email-mta-cloud-server/: configuration.md
servers/email-mta-local-server/: Dockerfile  add_users.sh  create.sh  (+2 more)
(+121 files in other folders)
